--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <!-- Never use more than one h1 -->
                     <h1>Steve <br> Weidig</h1>
                 </div>
-                <h2>Junior Front End <br>
+                <h2>Junior Full-stack <br>
                     Web Developer</h2>
             </div>
 
@@ -53,11 +53,10 @@
             <button id="CVpopup">Open printable CV</button>
             <div id="CVModal">
                 <div id="Modalcontent">
-                    <p id="PModal">The CV will come here <br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit beatae dolor optio. Ex, harum.
-                        Praesentium consequuntur maiores officiis dolore culpa ducimus voluptatem dolorem deserunt,
-                        assumenda iste qui soluta doloremque quasi?
-                    </p>
+                    <!-- <a href="Files/JuniorWebDeveloperResumeSteveWEIDIG.pdf">CV</a>
+                    <button id="printCV">Print the CV</button> -->
+                    <!-- ? iframe works better than using a href as it includes the download and print options automatically -->
+                        <iframe src="Files/JuniorWebDeveloperResumeSteveWEIDIG.pdf" style="width: 100%; height: 90vh; border: none;"></iframe>
                     <span class="close"> &times;</span>
 
                 </div>
