foldable menu and WIP

--- a/index.html
+++ b/index.html
@@ -16,12 +16,26 @@
     <header>
         <div id="header">
             <img id="logo" src="Images/Weidig_Steve_Front-End_Developer-transparent.png" alt="">
+            <img id="WIP" src="Images/63507.jpg" alt="Site under Construction">
             <nav>
                 <ul id="navbar">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">My Resume</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Skills</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <!-- <li><a href="#">Projects and Portfolio</a></li> -->
+                    <div id="Portfolio">
+                        <input type="checkbox" id="projects">
+                        <label for="projects">Portfolio and Projects</label>
+                        <nav id="projectList">
+                            <ul>
+                                <li><a href="#">Project</a></li>
+                                <li><a href="#">Project</a></li>
+                                <li><a href="#">Project</a></li>
+                                <li><a href="#">Project</a></li>
+                                <li><a href="#">Project</a></li>
+                            </ul>
+                        </nav>
+
+                    </div>
                 </ul>
             </nav>
 
@@ -67,6 +81,7 @@
         <div id="socialM">
             <i class="fab fa-linkedin-in"></i>
         </div>
+        <p>Picture copyright: <a href='https://www.freepik.com/vectors/construction'>Construction vector created by studiogstock - www.freepik.com</a></p>
     </footer>
 
     <script src="Scripts/Script.js"></script>
