--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <i class="fab fa-linkedin-in"></i>
         </div>
         <p>Picture copyright: <a href='https://www.freepik.com/vectors/construction'>Construction vector created by studiogstock - www.freepik.com</a></p>
+        <h5>&copy; Weidig Steve 2021</h5>
     </footer>
 
     <script src="Scripts/Script.js"></script>
