Changing the navigation design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <!-- <li><a href="#">Projects and Portfolio</a></li> -->
                     <div id="Portfolio">
                         <input type="checkbox" id="projects">
-                        <label for="projects">Portfolio and Projects</label>
+                        <label for="projects">Portfolio</label>
                         <nav id="projectList">
                             <ul>
                                 <li><a href="#">Project</a></li>
