portfolio to li

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Skills</a></li>
                     <!-- <li><a href="#">Projects and Portfolio</a></li> -->
-                    <div id="Portfolio">
+                    <li id="Portfolio">
                         <input type="checkbox" id="projects">
                         <label for="projects">Portfolio</label>
                         <nav id="projectList">
@@ -36,7 +36,7 @@
                             </ul>
                         </nav>
 
-                    </div>
+                    </li>
                 </ul>
             </nav>
 
