--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <!-- <a href="Files/JuniorWebDeveloperResumeSteveWEIDIG.pdf">CV</a>
                     <button id="printCV">Print the CV</button> -->
                     <!-- ? iframe works better than using a href as it includes the download and print options automatically -->
-                        <iframe src="Files/JuniorWebDeveloperResumeSteveWEIDIG.pdf" style="width: 100%; height: 90vh; border: none;"></iframe>
+                        <iframe src="Files/Junior Web Developer Resume Steve WEIDIG.pdf" style="width: 100%; height: 90vh; border: none;"></iframe>
                     <span class="close"> &times;</span>
 
                 </div>
