--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div id="socialM">
             <i class="fab fa-linkedin-in"></i>
         </div>
-        <p>Picture copyright: <a href='https://www.freepik.com/vectors/construction'>Construction vector created by studiogstock - www.freepik.com</a></p>
+        <p id="Copyright">Picture copyright: <a href='https://www.freepik.com/vectors/construction'>Construction vector created by studiogstock - www.freepik.com</a></p>
         <h5>&copy; Weidig Steve 2021</h5>
     </footer>
 
