--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <img id="WIP" src="Images/63507.jpg" alt="Site under Construction">
             <nav>
                 <ul id="navbar">
+                    <li><a class="close" href="javascript:void(0)">&times;</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Skills</a></li>
                     <!-- <li><a href="#">Projects and Portfolio</a></li> -->
