--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://kit.fontawesome.com/e2a253c429.js"></script>
     <title>Portfolio homepage</title>
 </head>
@@ -18,9 +19,10 @@
         <div id="header">
             <img id="logo" src="Images/Weidig_Steve_Front-End_Developer-transparent.png" alt="">
             <img id="WIP" src="Images/63507.jpg" alt="Site under Construction">
-            <nav>
+            <nav id="mainmenu">
+                <i class="fa-solid fa-bars"></i>
                 <ul id="navbar">
-                    <li><a class="close" href="javascript:void(0)">&times;</a></li>
+                    <li><a class="closeMenu" href="javascript:void(0)">&times;</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Skills</a></li>
                     <!-- <li><a href="#">Projects and Portfolio</a></li> -->
