--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     </main>
     <footer>
         <div id="socialM">
-            <i class="fab fa-linkedin-in"></i>
+            <a href="https://www.linkedin.com/in/steve-weidig/"><i class="fab fa-linkedin-in"></i></a>
+            
         </div>
         <p id="Copyright">Picture copyright: <a href='https://www.freepik.com/vectors/construction'>Construction vector created by studiogstock - www.freepik.com</a></p>
         <h5>&copy; Weidig Steve 2021</h5>
