--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul id="navbar">
                     <li><a class="closeMenu" href="javascript:void(0)">&times;</a></li>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Skills</a></li>
+                    <li><a href="pages/skills.html">Skills</a></li>
                     <!-- <li><a href="#">Projects and Portfolio</a></li> -->
                     <li id="Portfolio">
                         <input type="checkbox" id="projects">
