Added portfolio page

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -53,7 +53,7 @@
             <h5>&copy; Weidig Steve 2021</h5>
         </footer>
 
-        <script src="../Scripts/Skillscript.js"></script>
+        <script src="../Scripts/portfolioscript.js"></script>
         <script src="https://kit.fontawesome.com/e2a253c429.js"></script>
 
 </body>
