--- a/index.html
+++ b/index.html
@@ -26,20 +26,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pages/skills.html">Skills</a></li>
                     <!-- <li><a href="#">Projects and Portfolio</a></li> -->
-                    <li id="Portfolio">
-                        <input type="checkbox" id="projects">
-                        <label for="projects">Portfolio</label>
-                        <nav id="projectList">
-                            <ul>
-                                <li><a href="#">Project</a></li>
-                                <li><a href="#">Project</a></li>
-                                <li><a href="#">Project</a></li>
-                                <li><a href="#">Project</a></li>
-                                <li><a href="#">Project</a></li>
-                            </ul>
-                        </nav>
-
-                    </li>
+                    <li><a href="pages/portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
 
