--- a/index.html
+++ b/index.html
@@ -25,8 +25,21 @@
                     <li><a class="closeMenu" href="javascript:void(0)">&times;</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pages/skills.html">Skills</a></li>
-                    <!-- <li><a href="#">Projects and Portfolio</a></li> -->
                     <li><a href="pages/portfolio.html">Portfolio</a></li>
+                    <!-- <li id="Portfolio">
+                        <input type="checkbox" id="projects">
+                        <label for="projects">Portfolio</label>
+                        <nav id="projectList">
+                            <ul>
+                                <li><a href="#">Project</a></li>
+                                <li><a href="#">Project</a></li>
+                                <li><a href="#">Project</a></li>
+                                <li><a href="#">Project</a></li>
+                                <li><a href="#">Project</a></li>
+                            </ul>
+                        </nav>
+
+                    </li> -->
                 </ul>
             </nav>
 
