--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -23,21 +23,7 @@
                         <li><a class="closeMenu" href="javascript:void(0)">&times;</a></li>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../pages/skills.html">Skills</a></li>
-                        <!-- <li><a href="#">Projects and Portfolio</a></li> -->
-                        <li id="Portfolio">
-                            <input type="checkbox" id="projects">
-                            <label for="projects">Portfolio</label>
-                            <nav id="projectList">
-                                <ul>
-                                    <li><a href="#">Project</a></li>
-                                    <li><a href="#">Project</a></li>
-                                    <li><a href="#">Project</a></li>
-                                    <li><a href="#">Project</a></li>
-                                    <li><a href="#">Project</a></li>
-                                </ul>
-                            </nav>
-    
-                        </li>
+                        <li><a href="../pages/portfolio.html">Portfolio</a></li>
                     </ul>
                 </nav>
     
