--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div id=description>
                 <div id="h1">
                     <!-- Never use more than one h1 -->
-                    <h1>Steve <br> Weidig</h1>
+                    <h1 id="MyName">Steve <br> Weidig</h1>
                 </div>
-                <h2>Junior Full-stack <br>
+                <h2 id="Jobdescription">Junior Full-stack <br>
                     Web Developer</h2>
             </div>
 
