Skills Javascript and new logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div id="header">
-            <img id="logo" src="Images/Weidig_Steve_Front-End_Developer-transparent.png" alt="">
+            <img id="logo" src="Images/Weidig_Steve_Junior_Fullstack_Developer-transparent.png" alt="Logo">
             <img id="WIP" src="Images/63507.jpg" alt="Site under Construction">
             <nav id="mainmenu">
                 <i class="fa-solid fa-bars"></i>
