tried fixing the skill js

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -30,6 +30,15 @@
             </div>
       </header>
 
+      <main>
+        <section>
+            <a class="plink" href=""></a>
+            <p class="pdescription">
+                
+            </p>
+        </section>
+      </main>
+
       <footer>
             <div id="socialM">
                 <a href="https://www.linkedin.com/in/steve-weidig/"><i class="fab fa-linkedin-in"></i></a>
