--- a/pages/skills.html
+++ b/pages/skills.html
@@ -69,17 +69,17 @@
                     <ul>
                         <li><div class="skills html">HTML5<div class="outoften">9</div></div></li>
                         <li><div class="skills css">CSS3, SCSS, SASS<div class="outoften">8</div></div></li>
-                        <li><div class="skills">Javascript<div class="outoften">7</div></div></li>
-                        <li><div class="skills">Angular</div></li>
-                        <li><div class="skills">React</div></li>
-                        <li><div class="skills">Vue.js</div></li>
-                        <li><div class="skills">jQuery</div></li>
-                        <li><div class="skills">AJAX</div></li>
-                        <li><div class="skills">Bootstrap</div></li>
-                        <li><div class="skills">Wordpress for Developers</div></li>
-                        <li><div class="skills">Ionic</div></li>
-                        <li><div class="skills">Low-Code/No-Code</div></li>
-                        <li><div class="skills">Bubble.io</div></li>
+                        <li><div class="skills js">Javascript<div class="outoften">7</div></div></li>
+                        <li><div class="skills Angular">Angular</div></li>
+                        <li><div class="skills React">React</div></li>
+                        <li><div class="skills Vue">Vue.js</div></li>
+                        <li><div class="skills JQ">jQuery</div></li>
+                        <li><div class="skills Ajax">AJAX</div></li>
+                        <li><div class="skills BS">Bootstrap</div></li>
+                        <li><div class="skills WP">Wordpress for Developers</div></li>
+                        <li><div class="skills Ionic">Ionic</div></li>
+                        <li><div class="skills Low">Low-Code/No-Code</div></li>
+                        <li><div class="skills Bubble">Bubble.io</div></li>
                     </ul>
             </section>
             
