--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -31,11 +31,37 @@
       </header>
 
       <main>
-        <section>
-            <a class="plink" href=""></a>
-            <p class="pdescription">
-                
+        <section class="project">
+            <a class="plink" href="https://tool-repository.netlify.app/">The Web development Tools Repository</a>
+            <p class="pdescription part1">
+                During my different trainings I encountered a lot of diverse tools that are being used during different stages of development. As such, for my first website ever, I tried to collect all those tools, link to their respective websites, and add a quick despcription for them for any potential future reader.
             </p>
+            <p class="pdescription part2">
+                Planned to be completely remade in React and only show the sites from a specific selection instead of all of them at once.
+            </p>
+        </section>
+        <section class="project">
+            <a class="plink" href="https://chuck-norris-fact-generator.netlify.app/">Chuck Norris Facts</a>
+            <p class="pdescription part1">
+                A Website we made during training to consume an API, in this case Chuck Norris Facts, with some additional graphics.
+            </p>
+        </section>
+        <section class="project">
+            <a class="plink" href="">Space Travel Website</a>
+            <p class="pdescription part1">
+                The Final Group Project during my Web Development training, done entirely in php with Laravel. The link goes to the Github page since I couldn't find a free hosting platform for php websites.
+            </p>
+            <p class="pdescription part2">
+                My part in the project was to design and create the database and the migrations, as such
+            </p>
+        </section>
+        <section class="project">
+            <p class="pdescription part1"></p>
+            <p class="pdescription part2"></p>
+        </section>
+        <section class="project">
+            <p class="pdescription part1"></p>
+            <p class="pdescription part2"></p>
         </section>
       </main>
 
