--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     <!-- Never use more than one h1 -->
                     <h1 id="MyName">Steve <br> Weidig</h1>
                 </div>
-                <h2 id="Jobdescription">Junior Full-stack <br>
-                    Web Developer</h2>
+                <h2 id="Jobdescription">Junior Full-stack Web<br>
+                    and API Developer</h2>
             </div>
 
             <!-- <P>Creative and passionate Junior Front-End Developper, Creating 
