--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -52,14 +52,25 @@
                 The Final Group Project during my Web Development training, done entirely in php with Laravel. The link goes to the Github page since I couldn't find a free hosting platform for php websites.
             </p>
             <p class="pdescription part2">
-                My part in the project was to design and create the database and the migrations, as such
+                My part in the project was to design and create the database and the migrations as well as the final presentation of the project and some of the back-office, as such not very much of the actual code of the website is made by myself.
             </p>
         </section>
         <section class="project">
+            <a class="plink" href="">Dionn's Lego Collection</a>
+            <p class="pdescription part1">
+                A small website with a table of Lego sets, complete with their serial number and picture, a well as a sorting function created in AJAX
+            </p>
+            <p class="pdescription part2">
+                My little nephew, for whom I created this website, lives in the Philippines. As such, it's hard to track what sets he owns directly, so I made this little website to keep track of everything.
+            </p>
+        </section>
+        <section class="project">
+            <a class="plink" href=""></a>
             <p class="pdescription part1"></p>
             <p class="pdescription part2"></p>
         </section>
         <section class="project">
+            <a class="plink" href=""></a>
             <p class="pdescription part1"></p>
             <p class="pdescription part2"></p>
         </section>
