--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -48,16 +48,16 @@
                 </p>
             </section>
             <section class="project">
-                <a class="plink" href="">Space Travel Website</a>
+                <a class="plink" href="https://github.com/Bofferbrauer/Space_project">Space Travel Website</a>
                 <p class="pdescription part1">
                     The Final Group Project during my Web Development training, done entirely in php with Laravel. The link goes to the Github page since I couldn't find a free hosting platform for php websites.
                 </p>
                 <p class="pdescription part2">
-                    My part in the project was to design and create the database and the migrations as well as the final presentation of the project and some of the back-office, as such not very much of the actual code of the website is made by myself.
+                    My part in the project was to design and create the database and the migrations as well as the final presentation of the project and some of the back-office and all the online research for the project, including all the pictures. As such not very much of the actual code of the website is made by myself. The basic designs of the database however are added as pictures to the project to be able to see them at a glance.
                 </p>
             </section>
             <section class="project">
-                <a class="plink" href="">Dionn's Lego Collection</a>
+                <a class="plink" href="https://dionn-lego-collection.netlify.app">Dionn's Lego Collection</a>
                 <p class="pdescription part1">
                     A small website with a table of Lego sets, complete with their serial number and picture, a well as a sorting function created in AJAX
                 </p>
@@ -66,15 +66,21 @@
                 </p>
             </section>
             <section class="project">
-                <a class="plink" href=""></a>
-                <p class="pdescription part1"></p>
-                <p class="pdescription part2"></p>
+                <a class="plink" href="https://gitlab.com/Kostas.k/kostas_steve_final_project">Python Car Rental API</a>
+                <p class="pdescription part1">
+                    A car rental API that we did as final project during my API training, programmed under Python with FastAPI.
+                </p>
+                <p class="pdescription part2">
+                    Was uploaded to Heroku, however due to the recent licensing changes which eliminated the free acccounts, the API is offline now. As such, I linked the gitlab account entry, where you may need to be invited in as guest to see the code.
+                </p>
             </section>
+
+            <!-- * for future entries  
             <section class="project">
                 <a class="plink" href=""></a>
                 <p class="pdescription part1"></p>
                 <p class="pdescription part2"></p>
-            </section>
+            </section> -->
         </article>
         
     </main>
