--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <!-- <a href="Files/JuniorWebDeveloperResumeSteveWEIDIG.pdf">CV</a>
                     <button id="printCV">Print the CV</button> -->
                     <!-- ? iframe works better than using a href as it includes the download and print options automatically -->
-                        <iframe src="Files/Junior Web Developer Resume Steve WEIDIG.pdf" style="width: 100%; height: 90vh; border: none;"></iframe>
+                        <iframe src="Files/Junior Developer Resume Steve WEIDIG.pdf" style="width: 100%; height: 90vh; border: none;"></iframe>
                     <span class="close"> &times;</span>
 
                 </div>
@@ -87,7 +87,7 @@
             
         </div>
         <p id="Copyright">Picture copyright: <a href='https://www.freepik.com/vectors/construction'>Construction vector created by studiogstock - www.freepik.com</a></p>
-        <h5>&copy; Weidig Steve 2021</h5>
+        <h5>&copy; Weidig Steve 2023</h5>
     </footer>
 
     <script src="Scripts/Script.js"></script>
