--- a/pages/skills.html
+++ b/pages/skills.html
@@ -92,7 +92,7 @@
                     <li><div class="skills Nsql">NoSQL<div class="outoften">7</div></div></li>
                     <li><div class="skills pgsql">PostGreSQL<div class="outoften">7</div></div></li>
                     <li><div class="skills python">Python<div class="outoften">7</div></div></li>
-                    <li><div class="skills node">NodeJS<div class="outoften">7</div></div></li>
+                    <li><div class="skills node">NodeJS/NPM<div class="outoften">7</div></div></li>
                 </ul>
             </section>
             
